# robotDog

modules/common/base/: macros.h
modules/common/base_message/: message.h  message_status.hpp
modules/common/binary/: binary.cc  binary.h
modules/common/configs/: config_gflags.cc  config_gflags.h  vehicle_config_helper.cc  vehicle_config_helper.h
modules/common/costmap/: costmap.h  costmap_generator.cpp  costmap_generator.h  inflation.cpp  inflation.h
modules/common/enum/: enum.h
modules/common/fault/: fault_client.hpp  fault_handle.hpp
modules/common/file/: file.cc  file.h
modules/common/integration_service/: dds_2_ros1.yaml  integration_service.yaml  ros1_2_dds.yaml
modules/common/integration_service/ros/src/athena/ros_interface/: CMakeLists.txt
modules/common/integration_service/ros/src/athena/ros_interface/msg/: ADCTrajectory.msg  AlarmMessage.msg  BBox2D.msg  CameraParkingInfo.msg  CameraParkingInfoList.msg  CameraParkingStopper.msg  Chassis.msg  CommCommand.msg  CommandRespond.msg  CompressedImage.msg  ControlAnalysis.msg  ControlCommand.msg  DiagnosticArray.msg  DiagnosticStatus.msg  DrivableRegion.msg  EStop.msg  EndPoints.msg  Event.msg  Events.msg  Fault.msg  Faults.msg  Fins.msg  FreeSpace.msg  GlobalRouteMsg.msg  Gnss.msg  Grid.msg  HMIDiagnosticArray.msg  HMIDiagnosticStatus.msg  HMIObstacle.msg  HMIObstacleList.msg  HMIObuCmd.msg  HMIObuCmdMsg.msg  HMIParkingInfo.msg  HMIParkingInfoList.msg  HMIParkingStateDisplay.msg  HMITrajectory.msg  HMITrajectoryPoint.msg  HMIVehicleMsg.msg  Headers.msg  HolisticPathPrediction.msg  (+86 more)
modules/common/interface/: adc_trajectory.hpp  alarm_message.hpp  apa_parking_status.hpp  bbox_2d.hpp  camera_parking.hpp  camera_parking_info.hpp  camera_parking_info_list.hpp  camera_parking_list.hpp  camera_parking_stopper.hpp  chassis.hpp  comm_command.hpp  command.hpp  command_respond.hpp  compressed_image.hpp  control_analysis.hpp  control_command.hpp  curvature_info.hpp  diagnostic_array.hpp  diagnostic_status.hpp  drivable_region.hpp  end_points.hpp  estop.hpp  event.hpp  events.hpp  fault.hpp  faults.hpp  fins.hpp  free_space.hpp  free_space_detection_out.hpp  frenet_frame_point.hpp  gaussian_info.hpp  global_route_msg.hpp  gnss.hpp  grid.hpp  guide_info.hpp  guide_road.hpp  header.hpp  hmi_diagnostic_array.hpp  hmi_diagnostic_status.hpp  hmi_obstacle.hpp  (+130 more)
modules/common/json/: json.hpp
modules/common/logging/: logging.h
modules/common/macros/: macros.h
modules/common/math/: aabox2d.cc  aabox2d.h  aaboxkdtree2d.h  angle.cc  angle.h  box2d.cc  box2d.h  cartesian_frenet_conversion.cc  cartesian_frenet_conversion.h  curve_fitting.h  curve_math.cc  curve_math.h  euler_angles_zxy.h  factorial.h  hermite_spline.h  integral.cc  integral.h  kalman_filter.h  line_segment2d.cc  line_segment2d.h  linear_interpolation.cc  linear_interpolation.h  linear_quadratic_regulator.cc  linear_quadratic_regulator.h  math_tools.cpp  math_tools.h  math_utils.cc  math_utils.h  matrix_operations.cc  matrix_operations.h  mpc_osqp.cpp  mpc_osqp.h  path_matcher.cc  path_matcher.h  polygon2d.cc  polygon2d.h  polynomial_xd.cc  polynomial_xd.h  quaternion.h  search.cc  (+7 more)
modules/common/projector/: projector.hpp
modules/common/proto/: adc_trajectory.proto  alarm_message.proto  apa_parking_status.proto  bbox_2d.proto  camera_parking_info.proto  camera_parking_info_list.proto  camera_parking_stopper.proto  chassis.proto  comm_command.proto  command.proto  command_respond.proto  common_enum.proto  compressed_image.proto  control_analysis.proto  control_command.proto  diagnostic_array.proto  diagnostic_status.proto  drivable_region.proto  end_points.proto  estop.proto  event.proto  events.proto  fault.proto  faults.proto  fins.proto  free_space.proto  frenet_frame_point.proto  gaussian_info.proto  global_route_msg.proto  gnss.proto  grid.proto  header.proto  hmi_diagnostic_array.proto  (+132 more)
modules/perception_bridge/src/perception_bridge/: CMakeLists.txt
modules/perception_bridge/src/perception_bridge/config/: params.yaml
modules/perception_bridge/src/perception_bridge/include/perception_bridge/: RobotDogState.h  commonStruct.h  globalProject.h  perception_bridge.h
modules/perception_bridge/src/perception_bridge/launch/: perception_bridge_two.launch
modules/perception_bridge/src/perception_bridge/msg/: PercCmd.msg  PercState.msg
modules/perception_bridge/src/perception_bridge/src/: DogMain.cpp  RobotDogState.cpp  perception_bridge_node.cpp
modules/perception_bridge/src/perception_bridge/srv/: GlobalMapping.srv
modules/robot-dog/: .gitignore
(+2319 files in other folders)
