cmake_minimum_required(VERSION 2.8.3)
project(ros_interface)

find_package(catkin REQUIRED COMPONENTS
  message_generation
  std_msgs
)

## Generate messages in the 'msg' folder
add_message_files(
  DIRECTORY msg
  FILES
Header.msg
Time.msg
Status.msg
PointENU.msg
PointBasic.msg
PointLLH.msg
Point2D.msg
Point3D.msg
Quaternion.msg
Polygon3D.msg
Polygon2D.msg
ImageKeyPoint.msg
SLPoint.msg
SLBoundary.msg
FrenetFramePoint.msg
SpeedPoint.msg
PathPoint.msg
Path.msg
TrajectoryPoint.msg
Trajectory.msg
VehicleMotionPoint.msg
VehicleMotion.msg
GaussianInfo.msg
VehicleSignal.msg
PadMessage.msg
Stories.msg
Fault.msg
Faults.msg
Event.msg
Events.msg
EStop.msg
Matrix3D.msg
Pose.msg
Uncertainty.msg
Chassis.msg
ControlCommand.msg
WheelInfo.msg
ControlAnalysis.msg
VehicleParam.msg
VehicleConfig.msg
PredictionObstacles.msg
Location.msg
Odometry.msg
ObstacleList.msg
LaneList.msg
TrafficLightMsg.msg
Ultrasonic.msg
RadarObstacleListMsg.msg
PointCloud.msg
RadarObstacle.msg
UltrasonicObstacle.msg
PointXYZIRT.msg
CompressedImage.msg
Image.msg
Gnss.msg
Imu.msg
Ins.msg
ObuCmdMsg.msg
RoutingRequest.msg
ObuCmd.msg
ParkingInfo.msg
KeyPoint.msg
SensorCalibrator.msg
TrafficLight.msg
StopPoint.msg
LanePoint.msg
LaneInfo.msg
ObstacleIntent.msg
RoutingResponse.msg
StopInfo.msg
ADCTrajectory.msg
BBox2D.msg
Obstacle.msg
RSSInfo.msg
ObstaclePriority.msg
PlanningCmd.msg
PredictionObstacle.msg
TrajectoryInPrediction.msg
TrajectoryPointInPrediction.msg
PredictionTrajectoryPoint.msg
PerceptionObstacle.msg
ObstacleFeature.msg
LaneLine.msg
LaneLineCubicCurve.msg
EndPoints.msg
FreeSpace.msg
HolisticPathPrediction.msg
RoadMark.msg
TrafficLightDebug.msg
TrafficLightBox.msg
ImageRect.msg
RadarState.msg
RadarStateError.msg
RadarStateMode.msg
SotifMonitorResult.msg
Region.msg
Grid.msg
CameraParkingInfo.msg
CameraParkingInfoList.msg
SecurityDecision.msg
WarningCommand.msg
TrajectoryLimitCommand.msg
ParkingInfoList.msg
CommCommand.msg
CommandRespond.msg
ModuleStatus.msg
Command.msg
Message.msg
PlanningAnalysis.msg
TimeConsume.msg
PlanningParkingDebug.msg
TrajectoryArray.msg
VehicleState.msg
DrivableRegion.msg
ObstacleInteractiveTag.msg
Twist.msg
ParkingStateDisplay.msg
ParkingRoi.msg
Point2dList.msg
ParkingOutInfo.msg
JunctionInfo.msg
TrafficEvents.msg
LimitSpeedInfo.msg
Log.msg
Pavementype.msg
WLConstraintInfoList.msg
WLConstraintInfo.msg
UssObstacleList.msg
UssObstacle.msg
UssParkingInfoList.msg
UssParkingInfo.msg
CameraParkingStopper.msg
ParkingStopper.msg
DiagnosticArray.msg
DiagnosticStatus.msg
KeyValues.msg
AlarmMessage.msg
LaneletInfo.msg
GlobalRouteMsg.msg
RouteFusionInfo.msg
RoadMarkList.msg
HMIObuCmd.msg
HMIObuCmdMsg.msg
HMIParkingStateDisplay.msg
HMIParkingInfo.msg
HMIParkingInfoList.msg
HMIVehicleMsg.msg
HMIObstacle.msg
HMIObstacleList.msg
HMITrajectoryPoint.msg
HMITrajectory.msg
HMIDiagnosticStatus.msg
HMIDiagnosticArray.msg
)

## Generate added messages and services with any dependencies listed here
generate_messages(
  DEPENDENCIES
  std_msgs
)

catkin_package(
  CATKIN_DEPENDS
  message_runtime
 #std_msgs
)
